font size issues fix

--- a/apply-now.html
+++ b/apply-now.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/bootstrap.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-white">
+    <nav class="navbar navbar-expand-md navbar-light bg-white position-sticky top-0">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img src="./images/sublime-logo.svg" height="70" alt="" />
@@ -40,7 +40,7 @@
               <a
                 class="btn btn-primary d-md-inline-block d-block"
                 href="./apply-now.html"
-                >Apply Now</a
+                >Check Eligibility</a
               >
             </li>
           </ul>
@@ -57,12 +57,12 @@
         <div class="text-center">
           <h2 class="text-primary mb-8">Enter Your Postal Code</h2>
           <div class="row">
-            <div class="col-md-8 mx-auto">
+            <div class="col-md-6 mx-auto">
               <form action="" class="mb-4">
                 <div class="form-group mb-0">
                   <div class="input-group mb-0">
-                    <input type="text" class="form-control" />
-                    <button class="btn btn-outline-primary">Search</button>
+                    <input type="text" class="form-control bg-white shadow-sm" placeholder="ENTER POSTCODE" />
+                    <button class="btn btn-primary shadow-sm">CHECK</button>
                   </div>
                   <div class="invalid-feedback">Address is not available</div>
                 </div>
