--- a/about-us.html
+++ b/about-us.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/bootstrap.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-white">
+    <nav class="navbar navbar-expand-md navbar-light bg-white position-sticky top-0">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img src="./images/sublime-logo.svg" height="70" alt="" />
@@ -32,7 +32,7 @@
               <a class="nav-link" href="./about-us.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="btn btn-primary d-md-inline-block d-block" href="./apply-now.html">Apply Now</a>
+              <a class="btn btn-primary d-md-inline-block d-block" href="./apply-now.html">Check Eligibility</a>
             </li>
           </ul>
         </div>
