--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="./slick/slick-theme.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-white position-sticky top-0">
+    <nav
+      class="navbar navbar-expand-md navbar-light bg-white position-sticky top-0"
+    >
       <div class="container">
         <a class="navbar-brand" href="#">
           <img src="./images/sublime-logo.svg" height="70" alt="" />
@@ -25,8 +27,13 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse pt-md-0 pt-4" id="navbarSupportedContent">
-          <ul class="navbar-nav gap-md-12 gap-4 align-items-center ms-auto mb-2 mb-lg-0">
+        <div
+          class="collapse navbar-collapse pt-md-0 pt-4"
+          id="navbarSupportedContent"
+        >
+          <ul
+            class="navbar-nav gap-md-12 gap-4 align-items-center ms-auto mb-2 mb-lg-0"
+          >
             <li class="nav-item">
               <a class="nav-link" href="./index.html">Home</a>
             </li>
@@ -34,7 +41,11 @@
               <a class="nav-link" href="./about-us.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="btn btn-primary d-md-inline-block d-block" href="./apply-now.html">Check Eligibility</a>
+              <a
+                class="btn btn-primary d-md-inline-block d-block"
+                href="./apply-now.html"
+                >Check Eligibility</a
+              >
             </li>
           </ul>
         </div>
@@ -137,30 +148,29 @@
           <div class="col-lg-4 col-md-6 col-12">
             <div class="box">
               <img src="./images/service-1.png" alt="" />
-              <h4 class="service fw-semibold">Free Solar pv</h4>
+              <h4 class="service fw-semibold">Free Air Source Heat Pump</h4>
               <p class="description mb-0">
-                Access the latest renewable technology with a Free Air Source
-                Heat Pump.
+                Install renewable Energy with an Air Source Heat Pump.
               </p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12">
             <div class="box">
               <img src="./images/service-2.png" alt="" />
-              <h4 class="service fw-semibold">Free Air Source Heat Pump</h4>
+              <h4 class="service fw-semibold">Free Solar Pannels</h4>
               <p class="description mb-0">
-                Access the latest renewable technology with a Free Air Source
-                Heat Pump.
+                Installing solar panels can contribute upto 40% of your energy
+                consumption.
               </p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12">
             <div class="box">
               <img src="./images/service-3.png" alt="" />
-              <h4 class="service fw-semibold">Free Boiler</h4>
+              <h4 class="service fw-semibold">Free Boiler Upgradation</h4>
               <p class="description mb-0">
-                Access the latest renewable technology with a Free Air Source
-                Heat Pump.
+                improve efficiency by replacing old inefficient with A rated
+                Combi boiler with 10 year warranty.
               </p>
             </div>
           </div>
@@ -169,28 +179,28 @@
               <img src="./images/service-4.png" alt="" />
               <h4 class="service fw-semibold">Free central heating</h4>
               <p class="description mb-0">
-                Access the latest renewable technology with a Free Air Source
-                Heat Pump.
+                Shifting from old heating ways to latest Central heating system
+                will lead to Wrarm, elevated and green future.
               </p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12">
             <div class="box">
               <img src="./images/service-5.png" alt="" />
-              <h4 class="service fw-semibold">Free insulation</h4>
+              <h4 class="service fw-semibold">Free whole house insulation</h4>
               <p class="description mb-0">
-                Access the latest renewable technology with a Free Air Source
-                Heat Pump.
+                Sublime Whole House Insulation not only cuts energy bills but
+                also reduces your carbon footprint while soundproofing your home
               </p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12">
             <div class="box">
               <img src="./images/service-6.png" alt="" />
-              <h4 class="service fw-semibold">Free insulation</h4>
+              <h4 class="service fw-semibold">Free smart heating controls</h4>
               <p class="description mb-0">
-                Access the latest renewable technology with a Free Air Source
-                Heat Pump.
+                Access the latest technology to control, track and mange your
+                home energy through smart comtrols.
               </p>
             </div>
           </div>
