--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
                   We're experts at securing energy saving funding and installing
                   energy efficient improvements into homes
                 </p>
-                <a href="" class="btn btn-outline-primary">Learn More</a>
+                <a href="#millions" class="btn btn-outline-primary"
+                  >Check Eligibility</a
+                >
               </div>
               <div class="col-lg-4">
                 <img
@@ -110,25 +112,29 @@
     <section id="millions" class="millions">
       <div class="container">
         <div class="row align-items-center g-lg-6 g-4">
-          <div class="col-lg-6">
-            <h2 class="text-white">
-              Millions of homes are qulified under ECO and local athorities
+          <div class="col-md-8 mx-auto">
+            <h2 class="text-white text-center">
+              Millions of homes are qualified under Eco and local Athurity
               schemes
             </h2>
-          </div>
-          <div class="col-lg-6">
-            <p
-              class="text-uppercase text-center text-white"
-              style="letter-spacing: 0.1cm"
-            >
-              Check if you qualify
+            <p class="text text-center text-white">
+              Check what measures your property could be eligible for, takes
+              less than 60 seconds.
             </p>
-            <form action="" class="qualify-form w-100">
-              <input
-                type="text"
-                class="form-control text-white bg-transparent border-white border-3"
-              />
-              <button class="btn bg-white text-primary">Search</button>
+          </div>
+          <div class="col-md-6 mx-auto">
+            <form action="" class="mb-4">
+              <div class="form-group mb-0">
+                <div class="input-group mb-0">
+                  <input
+                    type="text"
+                    class="form-control bg-white shadow-sm"
+                    placeholder="ENTER POSTCODE"
+                  />
+                  <button class="btn btn-primary shadow-sm">CHECK</button>
+                </div>
+                <div class="invalid-feedback">Address is not available</div>
+              </div>
             </form>
           </div>
         </div>
@@ -138,7 +144,7 @@
     <section class="services" id="services">
       <div class="container">
         <h3 class="text-center">Our Services</h3>
-        <p class="text text-center">
+        <p class="text text-center pb-12">
           With our whole home approach to energy saving Sublime Enerygy Services
           can help heat your home for less and keep it warmer for longer with
           our ECO 4 funding available on a range of services that include the
@@ -152,6 +158,7 @@
               <p class="description mb-0">
                 Install renewable Energy with an Air Source Heat Pump.
               </p>
+              <a href="">Learn More</a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12">
@@ -162,6 +169,7 @@
                 Installing solar panels can contribute upto 40% of your energy
                 consumption.
               </p>
+              <a href="">Learn More</a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12">
@@ -172,16 +180,18 @@
                 improve efficiency by replacing old inefficient with A rated
                 Combi boiler with 10 year warranty.
               </p>
+              <a href="">Learn More</a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12">
             <div class="box">
-              <img src="./images/service-4.png" alt="" />
+              <img src="./images/service-41.png" alt="" />
               <h4 class="service fw-semibold">Free central heating</h4>
               <p class="description mb-0">
                 Shifting from old heating ways to latest Central heating system
                 will lead to Wrarm, elevated and green future.
               </p>
+              <a href="">Learn More</a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12">
@@ -192,16 +202,18 @@
                 Sublime Whole House Insulation not only cuts energy bills but
                 also reduces your carbon footprint while soundproofing your home
               </p>
+              <a href="">Learn More</a>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12">
             <div class="box">
-              <img src="./images/service-6.png" alt="" />
+              <img src="./images/service-4.png" alt="" />
               <h4 class="service fw-semibold">Free smart heating controls</h4>
               <p class="description mb-0">
                 Access the latest technology to control, track and mange your
                 home energy through smart comtrols.
               </p>
+              <a href="">Learn More</a>
             </div>
           </div>
           <div class="col-12 text-center">
@@ -435,7 +447,7 @@
 
     <section class="contact" id="contact">
       <div class="container">
-        <div class="row">
+        <div class="row gy-8">
           <div class="col-lg-10 mx-auto text-center">
             <h2 class="text-primary mb-8">Sublime Energy Services</h2>
             <p class="text">
@@ -444,6 +456,35 @@
               team is working alongside with Gov. of United Kingdom for
               improving efficient energy use.
             </p>
+          </div>
+          <div class="col-12">
+            <div class="background">
+              <div class="row align-items-center g-lg-6 g-4">
+                <div class="col-md-6 text-md-end">
+                  <img src="./images/mark-map.png" alt="" />
+                </div>
+                <div class="col-md-6">
+                  <ul class="ps-0 list-unstyled d-flex flex-column gap-12">
+                    <li>
+                      <div class="fs-5 d-flex align-items-center gap-2">
+                        01274878333
+                      </div>
+                    </li>
+                    <li>
+                      <div class="fs-5 d-flex align-items-center gap-2">
+                        info@sublimeenergyservices.co.uk
+                      </div>
+                    </li>
+                    <li>
+                      <div class="fs-5 d-flex align-items-center gap-2">
+                        Nano park, 6 Flanshaw Way, Kelley way, Wakefield WF2
+                        9FW, United Kingdom
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
